<resources>
    <string name="app_name">netlogger</string>
    <string name="hint_search">Search by url</string>
    <string name="title_activity_net_log_detail_fragment">NetLogDetailFragment</string>
    <string name="tab_text_request">Request</string>
    <string name="tab_text_response">Body Response</string>
    <string name="header">Header</string>
    <string name="body">Body Request</string>
    <string name="url">URL:</string>
    <string name="response">Response</string>

    <string name="jsonViewer_icon_plus">expand</string>
    <string name="jsonViewer_icon_minus">collapse</string>
</resources>