<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    android:id="@+id/ctn_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="12dp"
                        app:srcCompat="@drawable/ic_back" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/url"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ctn_header" />

                <TextView
                    android:id="@+id/url"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textColor="#E91E63"
                    android:textStyle="bold"
                    android:textIsSelectable="true"
                    app:layout_constraintEnd_toStartOf="@+id/btn_copy_url"
                    app:layout_constraintStart_toEndOf="@id/textView"
                    app:layout_constraintTop_toBottomOf="@id/ctn_header"
                    tools:text="https://google.com" />

                <TextView
                    android:id="@+id/method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#E91E63"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/url"
                    tools:text="GET" />

                <TextView
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="#4CAF50"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/url"
                    app:layout_constraintTop_toBottomOf="@+id/url"
                    tools:text="200" />

                <LinearLayout
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/method">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/header"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="4dp"
                            android:textColor="#4CAF50"
                            android:textIsSelectable="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textView2"
                            tools:text="Body heaasniudahidhequwhcweqiuhqwiureqwhiurweqhiurewheiuwqrgrewuygrewiuqwrgiuqrwgiurwqgrwqiugwqriurwgiurwqgweiqrugrweider" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/btn_copy_header"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:contentDescription="@string/app_name"
                        android:focusable="true"
                        android:padding="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ctn_header"
                        app:srcCompat="@drawable/ic_copy" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/btn_copy_url"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:padding="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ctn_header"
                    app:srcCompat="@drawable/ic_copy" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txt_body"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="4dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingVertical="12dp"
                        android:text="@string/body"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_down"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/header" />

                    <ImageView
                        android:id="@+id/btn_copy_body_request"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:contentDescription="@string/app_name"
                        android:focusable="true"
                        android:padding="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ctn_header"
                        app:srcCompat="@drawable/ic_copy" />
                </LinearLayout>

                <TextView
                    android:id="@+id/body_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textIsSelectable="true"
                    android:text="@string/body"
                    android:textColor="#4CAF50"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_body" />

                <com.koai.netlogger.ui.jsonviewer.JsonRecyclerView
                    android:id="@+id/ctn_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/body_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/response"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ctn_body" />

                    <ImageView
                        android:id="@+id/btn_copy_response"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:contentDescription="@string/app_name"
                        android:focusable="true"
                        android:padding="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView3"
                        app:srcCompat="@drawable/ic_copy" />
                </LinearLayout>

                <com.koai.netlogger.ui.jsonviewer.JsonRecyclerView
                    android:id="@+id/rv_json_response"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_copy_response"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView3" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>